<resources>
    <string name="app_name">Booking Car Driver</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="save">Save</string>

    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_search">Search</string>
    <string name="bottom_navigation_notification">Notification</string>
    <string name="bottom_navigation_account">Account</string>

    <string name="phone_number">Phone number</string>
    <string name="pass_word">Password</string>
    <string name="confirm_pass_word">Confirm password</string>
    <string name="show_pass_word">Show password</string>

    <string name="first_and_last_name"> First and last name</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>

    <string name="identity_card">Identity card</string>
    <string name="driving_license">Driving license</string>
    <string name="license_plates">License plates</string>
    <string name="vehicle_registration_certificate">Vehicle registration certificate</string>
    <string name="civil_liability_insurance">Civil liability insurance</string>
    <string name="contract_car_badge">Contract car badge</string>
    <string name="keep_login">Keep logged in</string>
    <string name="vehicle_registration">Vehicle registration</string>

    //title image
    <string name="front_view_image">Front view image</string>
    <string name="back_view_image"> Back view image </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>