<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bottom_navigation_home" />

    <item
        android:id="@+id/ic_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/bottom_navigation_search" />

    <item
        android:id="@+id/ic_notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/bottom_navigation_notification" />
    <item
        android:id="@+id/ic_account"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bottom_navigation_account" />
</menu>