<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/nav_home_map">
    <fragment
        android:id="@+id/nav_home_map"
        android:label="@string/bottom_navigation_home"
        android:name="com.example.bookingcardriver.home.HomeMapFragment"
        tools:layout="@layout/fragment_account"/>

    <fragment
        android:id="@+id/nav_home_search"
        android:name="com.example.bookingcardriver.search.SearchFragment"
        tools:layout="@layout/fragment_search"
        android:label="@string/bottom_navigation_search"/>

    <fragment
        android:id="@+id/nav_home_notification"
        android:name="com.example.bookingcardriver.notification.NotificationFragment"
        android:label="@string/bottom_navigation_notification"
        tools:layout="@layout/fragment_notification"/>

    <fragment
        android:id="@+id/nav_home_account"
        android:name="com.example.bookingcardriver.account.AccountFragment"
        android:label="@string/bottom_navigation_account"
        tools:layout="@layout/fragment_account"/>
</navigation>