<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title_register"
                android:textColor="@color/yellow"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="@dimen/text_size"
                android:text="@string/register"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_phone_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:text="@string/phone_number"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_phone_number"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="@dimen/paddingNormal"
                android:layout_marginTop="@dimen/margin_top_bottom_normal"
                android:layout_marginRight="@dimen/margin_right_normal"
                android:layout_marginLeft="@dimen/margin_left_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_pass_word"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:text="@string/pass_word"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_pass_word"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/pass_word"
                android:inputType="textPassword"
                android:padding="@dimen/paddingNormal"
                android:layout_marginTop="@dimen/margin_top_bottom_normal"
                android:layout_marginRight="@dimen/margin_right_normal"
                android:layout_marginLeft="@dimen/margin_left_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_pass_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--<TextView
                android:id="@+id/tv_identity_card"
                style="@style/TextViewHeader"
                android:text="@string/identity_card"
                android:background="@drawable/rounded_edit_text"
                android:layout_marginTop="@dimen/margin_top_bottom_normal"
                android:layout_marginRight="@dimen/margin_right_normal"
                android:layout_marginLeft="@dimen/margin_left_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_pass_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_driving_license"
                style="@style/TextViewHeader"
                android:background="@drawable/rounded_edit_text"
                android:text="@string/driving_license"
                android:layout_marginTop="@dimen/margin_top_bottom_normal"
                android:layout_marginRight="@dimen/margin_right_normal"
                android:layout_marginLeft="@dimen/margin_left_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_identity_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_license_plates"
                style="@style/TextViewHeader"
                android:background="@drawable/rounded_edit_text"
                android:text="@string/license_plates"
                android:layout_marginTop="@dimen/margin_top_bottom_normal"
                android:layout_marginRight="@dimen/margin_right_normal"
                android:layout_marginLeft="@dimen/margin_left_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_driving_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_vehicle_res_certificate"
                style="@style/TextViewHeader"
                android:background="@drawable/rounded_edit_text"
                android:text="@string/vehicle_registration_certificate"
                android:layout_marginTop="@dimen/margin_top_bottom_normal"
                android:layout_marginRight="@dimen/margin_right_normal"
                android:layout_marginLeft="@dimen/margin_left_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_license_plates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_vehicle_res"
                android:text="@string/vehicle_registration"
                style="@style/TextViewHeader"
                android:background="@drawable/rounded_edit_text"
                android:layout_marginTop="@dimen/margin_top_bottom_normal"
                android:layout_marginRight="@dimen/margin_right_normal"
                android:layout_marginLeft="@dimen/margin_left_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_vehicle_res_certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_civil_liability_insurance"
                android:text="@string/civil_liability_insurance"
                style="@style/TextViewHeader"
                android:background="@drawable/rounded_edit_text"
                android:layout_marginTop="@dimen/margin_top_bottom_normal"
                android:layout_marginRight="@dimen/margin_right_normal"
                android:layout_marginLeft="@dimen/margin_left_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_vehicle_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_contract_car_badge"
                android:text="@string/contract_car_badge"
                style="@style/TextViewHeader"
                android:background="@drawable/rounded_edit_text"
                android:layout_marginTop="@dimen/margin_top_bottom_normal"
                android:layout_marginRight="@dimen/margin_right_normal"
                android:layout_marginLeft="@dimen/margin_left_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_civil_liability_insurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_register"
                android:text="@string/register"
                android:background="@drawable/rounded_btn"
                android:layout_marginTop="@dimen/margin_top_bottom_normal"
                android:layout_marginRight="@dimen/margin_right_large"
                android:layout_marginLeft="@dimen/margin_left_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_pass_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>